rl_assortment_pkg/force-app/main/default/objects/RL_Anaplan_Sync_Log__c/RL_Anaplan_Sync_Log__c.object-meta.xml
<CustomObject>
    <description>Audit log of every Anaplan sync event. Tracks what changed, when, how many records were affected, and any errors. Used for integration monitoring and troubleshooting.</description>
    <label>Anaplan Sync Log</label>
    <nameField>
        <label>Sync Log Name</label>
        <type>AutoNumber</type>
        <displayFormat>SYNC-{0000000}</displayFormat>
        <startingNumber>1</startingNumber>
    </nameField>
    <pluralLabel>Anaplan Sync Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>