rl_assortment_pkg/force-app/main/default/objects/RL_Anaplan_Sync_Log__c/fields/Assortment_Plan__c.field-meta.xml
<CustomField>
    <fullName>Assortment_Plan__c</fullName>
    <description>Plan that was updated in this sync event</description>
    <label>Assortment Plan</label>
    <referenceTo>RL_Assortment_Plan__c</referenceTo><relationshipLabel>Assortment Plan</relationshipLabel><relationshipName>SyncLogs</relationshipName>
    <type>Lookup</type>
</CustomField>