rl_assortment_pkg/force-app/main/default/objects/RL_Anaplan_Sync_Log__c/fields/Duration_Seconds__c.field-meta.xml
<CustomField>
    <fullName>Duration_Seconds__c</fullName>
    <description>How long the sync process took to complete</description>
    <label>Duration (Seconds)</label>
    <precision>18</precision><scale>1</scale>
    <type>Number</type>
</CustomField>