rl_assortment_pkg/force-app/main/default/objects/RL_Anaplan_Sync_Log__c/fields/Error_Detail__c.field-meta.xml
<CustomField>
    <fullName>Error_Detail__c</fullName>
    <description>Full error message or stack trace if sync failed or partially failed</description>
    <label>Error Detail</label>
    <length>32768</length><visibleLines>5</visibleLines>
    <type>LongTextArea</type>
</CustomField>