rl_assortment_pkg/force-app/main/default/objects/RL_Anaplan_Sync_Log__c/fields/Payload_Hash__c.field-meta.xml
<CustomField>
    <fullName>Payload_Hash__c</fullName>
    <description>SHA-256 hash of the incoming payload used to detect and skip duplicate sync events</description>
    <label>Payload Hash</label>
    <length>64</length>
    <type>Text</type>
</CustomField>