rl_assortment_pkg/force-app/main/default/objects/RL_Anaplan_Sync_Log__c/fields/Records_Added__c.field-meta.xml
<CustomField>
    <fullName>Records_Added__c</fullName>
    <description>Number of new line item records created</description>
    <label>Records Added</label>
    <precision>18</precision><scale>0</scale>
    <type>Number</type>
</CustomField>