rl_assortment_pkg/force-app/main/default/objects/RL_Anaplan_Sync_Log__c/fields/Records_Removed__c.field-meta.xml
<CustomField>
    <fullName>Records_Removed__c</fullName>
    <description>Number of line items removed from the plan</description>
    <label>Records Removed</label>
    <precision>18</precision><scale>0</scale>
    <type>Number</type>
</CustomField>