rl_assortment_pkg/force-app/main/default/objects/RL_Anaplan_Sync_Log__c/fields/Records_Updated__c.field-meta.xml
<CustomField>
    <fullName>Records_Updated__c</fullName>
    <description>Number of existing line item records updated</description>
    <label>Records Updated</label>
    <precision>18</precision><scale>0</scale>
    <type>Number</type>
</CustomField>