rl_assortment_pkg/force-app/main/default/objects/RL_Anaplan_Sync_Log__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Result status of the sync event</description>
    <label>Sync Status</label>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
        <value>
            <fullName>Success</fullName>
        </value>
        <value>
            <fullName>Partial Success</fullName>
        </value>
        <value>
            <fullName>Failed</fullName>
        </value>
        <value>
            <fullName>In Progress</fullName>
        </value>
        </valueSetDefinition>
    </valueSet>
    <type>Picklist</type>
</CustomField>