rl_assortment_pkg/force-app/main/default/objects/RL_Anaplan_Sync_Log__c/fields/Sync_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Sync_Timestamp__c</fullName>
    <description>DateTime when the sync process ran</description>
    <label>Sync Timestamp</label>
    
    <type>DateTime</type>
</CustomField>