rl_assortment_pkg/force-app/main/default/objects/RL_Anaplan_Sync_Log__c/fields/Triggered_By__c.field-meta.xml
<CustomField>
    <fullName>Triggered_By__c</fullName>
    <description>What initiated this sync</description>
    <label>Triggered By</label>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
        <value>
            <fullName>Scheduled Job</fullName>
        </value>
        <value>
            <fullName>Anaplan Event Push</fullName>
        </value>
        <value>
            <fullName>Manual Trigger</fullName>
        </value>
        <value>
            <fullName>Integration API</fullName>
        </value>
        </valueSetDefinition>
    </valueSet>
    <type>Picklist</type>
</CustomField>